[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,7 +3,17 @@
         <title>Article 1 Priyanka</title>
         <meta name="viewport" content="width=device-width, inital-scale=1">
     </head>
+    <style>
+        .container
+        {
+            color:grey;
+            font-family:arial;
+            width:800px;
+            margin:0 auto;
+        }
+    </style>
     <body>
+    <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -24,5 +34,6 @@
                 </p>
             </div>
         </div>
+    </div>
     </body>
 </html>
