--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,12 +3,15 @@
         <title>Article 1 Priyanka</title>
         <meta name="viewport" content="width=device-width, inital-scale=1">
         <style>
-        .container
+        .container 
         {
-            color:grey;
-            font-family:arial;
-            width:800px;
-            margin:0 auto;
+        color: grey;
+        font-family: arial;
+         width: 800px;
+         margin: 0 auto;
+         padding-top: 60px;
+         padding-left: 20px;
+         padding-right: 20px;
         }
     </style>
     </head>
