--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -2,8 +2,21 @@
     <head>
         <title>Article 1 Priyanka</title>
         <meta name="viewport" content="width=device-width, inital-scale=1">
+        <style>
+        .container 
+        {
+        color: grey;
+        font-family: arial;
+         width: 800px;
+         margin: 0 auto;
+         padding-top: 60px;
+         padding-left: 20px;
+         padding-right: 20px;
+        }
+        </style>
     </head>
     <body>
+        <div class="container ">
         <div>
             <a href="/">Home</a>
         </div>
@@ -16,6 +29,7 @@
             <div>
                 <p>This is the content for my second article.
             </div>
+        </div>
         </div>
     </body>
 </html>
