--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,18 +2,7 @@
     <head>
         <title>Article 1 Priyanka</title>
         <meta name="viewport" content="width=device-width, inital-scale=1">
-        <style>
-        .container 
-        {
-        color: grey;
-        font-family: arial;
-         width: 800px;
-         margin: 0 auto;
-         padding-top: 60px;
-         padding-left: 20px;
-         padding-right: 20px;
-        }
-    </style>
+         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     
     <body>
