--- a/ui/index.html
+++ b/ui/index.html
@@ -4,13 +4,15 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am Priyanka. This is may first webapp.
-        </div>
+        <div class="container">
+            <div class="center">
+                <img src="http://free.gatag.net/2010/12/11/110000.html" class="img-medium"/>
+            </div>
+            <br>
+            <div class="center text-big bold">
+                Hi! I am Priyanka. This is may first webapp.
+            </div>
+            </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
