[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <img src="http://free.gatag.net/2010/12/11/110000.html" class="img-medium"/>
+                <img src="C:\Users\Intel\Desktop\application_details.php_files\bdjpg" class="img-medium"/>
             </div>
             <br>
             <div class="center text-big bold">
