--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <img src="C:\Users\Intel\Desktop\application_details.php_files\bdjpg" class="img-medium"/>
+                <img src="C:\Users\Intel\Desktop\application_details.php_files\bd.jpg" class="img-medium"/>
             </div>
             <br>
             <div class="center text-big bold">
