[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
             <div class="center">
-                <img src="C:\Users\Intel\Desktop\application_details.php_files\bd.jpg" class="img-medium"/>
+                <img src="https://plus.google.com/u/0/photos/106569310091705581805/albums/profile/6330554400492057138" class="img-medium"/>
             </div>
             <br>
             <div class="center text-big bold">
