--- a/ui/index.html
+++ b/ui/index.html
@@ -8,9 +8,20 @@
             <div class="center">
                 <img src="https://plus.google.com/u/0/photos/106569310091705581805/albums/profile/6330554400492057138" class="img-medium"/>
             </div>
+            <hr/>
+                <h3>Personal</h3>
+            <div>
+                Hai.. My name is Priyanka..
+            </div>
             <br>
-            <div class="center text-big bold">
-                Hi! I am Priyanka. This is may first webapp.
+            <hr/>
+                <h3>Professional</h3>
+            <div>
+               NOt yetting worked!!!
+            </div>
+            <hr/>
+            <div class="footer">
+                
             </div>
             </div>
         <script type="text/javascript" src="/ui/main.js">
